--- a/index.html
+++ b/index.html
@@ -12,10 +12,46 @@
 <body>
 
     <div id="title-container">
-        <h1>Working Title in H1</h1>
+        <h1>Documenation of Dariyan's Developments</h1>
+    </div>
+    <div id="blog-container">
+        <h3>TEMPORARY for Portfolio Project #1</h3>
+        <div class="blog-content">
+        <h3>June: Got "HWTH" repo started.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Blog Title 2: Drafted on Word to organize my thoughts.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Blog Title 3: Discovered TensorFlow.JS.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Blog Title 4: Recap on creating platform as part of my portfolio.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Blog Title 5: New idea sparked: Talk C# in ASL.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Blog Title 6: Attempted at Fitness app/MACRO tracker with random generator.</h3>
+            <p>New updates on trials, errors, education, discovery on projects.</p>
+        </div>
+        
+
+
     </div>
 
     <div id="blog-container">
+        <h3>TEMPORARY BLOG for Portfolio Project #2</h3>
         <div class="blog-content">
         <h3>Blog Title 1: Got "HWTH" repo started.</h3>
             <p>New updates on trials, errors, education, discovery on projects.</p>
