--- a/index.html
+++ b/index.html
@@ -17,35 +17,39 @@
     <div id="blog-container">
         <h3>TEMPORARY for Portfolio Project #1</h3>
         <div class="blog-content">
-        <h3>June: Got "HWTH" repo started.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
+        <h3>CRAPS! I chose craps.</h3>
+        <em>June 1st, 2022</em>
+            <p>After reviewing the three project options of GUI portion of assignment, I chose CRAPS project. I find it ironic considering that I don't parttake in "gambling", not necessarily because I'm against it, I have the worst luck when it comes to betting anything. HA!
+                But I'm always up for a challenge and wanted to take advantage of my creativity solely based on what I can remember (design-wise on general slot machines or table games), and what I'd prefer to see in terms of understanding it without ever playing it before. While I'm skimming through the "How to Play Casino Craps for Beginners" blog provided by the professor, I'm refraining from searching for images (for the sake of creativity and originality, LOL) -- I already have an idea how I'd go about it.
+                I'm going to quickly draft my ideas, then I'll get the repository going and all that jive. 
+                Main window (richtextbox) should be the PLAYING AREA: Round level, encouraging messages, dices and results. 
+                Sectioned next to main window (groupbox) with increase/decrease buttons, roll, reset.
+                Second window (richtextbox) to track win/lose results. Maybe with balance and points.
+                or label style to display balance and points.
+                And while I'm typing all of these out, I'm well aware that I'll be developing GUIs in HTML and CSS with a bit of JavaScript, I used the C# form terms just to give myself a vision without actual painting. That said, I got the repo up and running, I figured now would be the time to do lecture reviews for some great re-freshers. 
+                Speaking of refresher, a boost of afternoon caffeine couldn't do harm with my creativity juice. Woot! Let's go!
+                </p>
         </div>
 
         <div class="blog-content">
-            <h3>Blog Title 2: Drafted on Word to organize my thoughts.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
+            <h3>What the 'script'?!</h3>
+            <em>June 2nd, 2022</em>
+            <p>I spent some time reviewing lectures to touch on the basic of JavaScript and my mind doesn't seem to register the 'script src' concept each and every time. Until I realized that I consistently missed on adding the alert(); because I had used it interchangeably with another method script without citing the "source". 
+                Once I had that figured out, I took a dig into JavaScript operators to ensure I understood when and why to use "===" and/or "==" both in C# AND JavaScript. I need to get comfortable with these concepts as I'm developing some design ideas for CRAPS project.
+                As far as the front-end, there's a few things I need to add onto what I've started since Wednesday:
+                I will need to utilize TABLES to sort out the BUTTON (organized layout).
+                Contents should be layered in mininum of two DIVS;
+                First DIV: HERO-IMAGE with CRAPS' rules above a container that holds the playing area.
+                Second DIV: PLAYING area with GRID-Template, rows and columns still being determined.
+                </p>
         </div>
 
         <div class="blog-content">
-            <h3>Blog Title 3: Discovered TensorFlow.JS.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
+            <h3>Layout ideas!</h3>
+            <em>June 4th, 2022</em>
+            <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the <dl> tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, so I can better control sectionally as far as styling goes.</p>
         </div>
 
-        <div class="blog-content">
-            <h3>Blog Title 4: Recap on creating platform as part of my portfolio.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
-        </div>
-
-        <div class="blog-content">
-            <h3>Blog Title 5: New idea sparked: Talk C# in ASL.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
-        </div>
-
-        <div class="blog-content">
-            <h3>Blog Title 6: Attempted at Fitness app/MACRO tracker with random generator.</h3>
-            <p>New updates on trials, errors, education, discovery on projects.</p>
-        </div>
-        
 
 
     </div>
