--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Documenation of Dariyan's Developments</h1>
     </div>
     <div id="blog-container">
-        <h3>TEMPORARY for Portfolio Project #1</h3>
+        <h3>TEMPORARY BLOG for Portfolio Project #1</h3>
         <div class="blog-content">
         <h3>CRAPS! I chose craps.</h3>
         <em>June 1st, 2022</em>
