--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <em>June 4th, 2022</em>
             <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the <dl> tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, so I can better control sectionally as far as styling goes.</p>
             
-                <iframe src="craps_project.html" width="300px";></iframe>
+                <iframe src="craps_project.html" width="500px"></iframe>
         </div>
 
 
