--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="title-container">
-        <h1>Documenation of Dariyan's Developments</h1>
+        <h1>Documentation of Dariyan's Developments</h1>
     </div>
     <div id="blog-container">
         <h3>TEMPORARY BLOG for Portfolio Project #1</h3>
