improving on visuals

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="blog-content">
         <h3>CRAPS! I chose craps.</h3>
         <em>Wed., June 1st, 2022</em>
-            <p>After reviewing the three project options of GUI portion of assignment, I chose CRAPS project. I find it ironic considering that I don't parttake in "gambling", not necessarily because I'm against it, I have the worst luck when it comes to betting anything. HA!
+            <p>After reviewing the three project options of GUI portion of assignment, 
+                I chose CRAPS project. I find it ironic considering that I don't parttake in "gambling", not necessarily because I'm against it, I have the worst luck when it comes to betting anything. HA!
                 But I'm always up for a challenge and wanted to take advantage of my creativity solely based on what I can remember (design-wise on general slot machines or table games), and what I'd prefer to see in terms of understanding it without ever playing it before. While I'm skimming through the "How to Play Casino Craps for Beginners" blog provided by the professor, I'm refraining from searching for images (for the sake of creativity and originality, LOL) -- I already have an idea how I'd go about it.
                 I'm going to quickly draft my ideas, then I'll get the repository going and all that jive. 
                 Main window (richtextbox) should be the PLAYING AREA: Round level, encouraging messages, dices and results. 
@@ -50,6 +51,8 @@
             <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the <dl> tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, so I can better control sectionally as far as styling goes.</p>
             
                 <iframe src="craps_project.html" width="500px"></iframe>
+
+                <p>Ideas updated: </p>
         </div>
 
 
