--- a/index.html
+++ b/index.html
@@ -52,7 +52,30 @@
             
                 <iframe src="craps_project.html" width="500px"></iframe>
 
-                <p>Ideas updated: </p>
+                <p>Ideas updated: Read over the rules of the game once again and figured
+                    it's simple but not simple. I'm not going to think too much into it,
+                as I'm feeling pretty confident it'll look how I envisioned. (I'm a perfectionist, my work will be my best work and ALWAYS a WIP.) </p>
+                <p>Note to self: Get on with these MEDIA QUERIESSSS.</p>
+        </div>
+        <div class="blog-content">
+            <h3>Can't use the < form > elements without the FORM tag!</h3>
+            <em>Sun., June 5th, 2022</em>
+            <p>Alright, first things first-- I forgot that the iFrames I previously 
+                added into yesterday's blog is a live-time display, luckily I had taken a screenshot
+                of the original layout I spent that "10 minutes" on. ;) Anyway, I'll keep the 
+                iFrames and add the screenshot while I'm at it.
+                </p>
+                <p>That said, back to the topic-- I'm still testing this theory, whether form elements can't be
+                    used without using the form tag, as with many other hiccups
+                    along the way. I made it as far as adding GRID into nested DIV ids and classes, 
+                    as I knew I needed more practice on these concepts.
+                    Ironically, I stumbled upon an issue with getting the columns utilizing classes.
+                    What it seems to me is working with IDs are much easier to manipulate, in terms of
+                    sectioned layouts. 
+                </p>
+                <p>I'm having a slight brain-fog from all these changes and discoveries,
+                    but it's entertaining. And somewhat therapuetic. 
+                </p>
         </div>
 
 
