--- a/craps_project.html
+++ b/craps_project.html
@@ -17,7 +17,11 @@
         
         <div id="header">
             <div id="header-content">
-                Round 1 sample
+               <dl>
+                   <dt>In Round One:</dt>
+                   <dd>1. Place your bet (no bet in Round Two)</dd>
+
+               </dl>
             </div>
             <div id="header-content">
                 Round 2 sample
