--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                 <p>I'm having a slight brain-fog from all these changes and discoveries,
                     but it's entertaining. And somewhat therapuetic. 
                 </p>
+                <p>I'm positive that you CAN use the FORM elements OUTSIDE of the form tag.</p>
+                <p>I used Descriptive Lists to achieve what I could've done with Ordered Lists. HAHAHAH.</p>
         </div>
 
 
