--- a/craps_project.html
+++ b/craps_project.html
@@ -17,11 +17,11 @@
         
         <div id="header">
             <div id="header-content">
-               <dl>
-                   <dt>In Round One:</dt>
-                   <dd>1. Place your bet (no bet in Round Two)</dd>
+               <ol>
+                   <li>Place your bet (no bet in Round 2)</li>
+                   <li>Roll each of your die: </li>
 
-               </dl>
+               </ol>
             </div>
             <div id="header-content">
                 Round 2 sample
