--- a/craps_project.html
+++ b/craps_project.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="main-body">
-        <h2 style="text-align: center">C R A P S GAME</h2>
+        <h2>C R A P S GAME</h2>
         <p style="text-align: center">This is where the game rules will be shown</p>
         
         <div id="header">
