--- a/craps_project.html
+++ b/craps_project.html
@@ -19,19 +19,19 @@
             <div id="header-content">
                <ol>
                    <p style="background-color: teal">ROUND ONE--</p>
-                   <li>Place your bet (no bet in Round 2)</li>
-                   <li>Roll each of your die</li>
-                   <li>You WIN if total rolled: 2, 3 or 12</li>
-                   <li>You LOSE if total rolled: 7 or 11</li>
-                   <li>Points earned on other DICE totals</li>
+                   <li>Place your bet (no bet in Round 2).</li>
+                   <li>Roll each die.</li>
+                   <li>You WIN if total rolled: 2, 3 or 12.</li>
+                   <li>You LOSE if total rolled: 7 or 11.</li>
+                   <li>Other #s rolled will be your POINT.</li>
                </ol>
             </div>
 
             <div id="header-content">
                 <ol>
                     <p style="background-color: teal">ROUND TWO--</p>
-                    <li>Continue to roll dice</li>
-                    <li>Total on POINTS earned, you WIN!</li>
+                    <li>Continue to roll dice.</li>
+                    <li>Roll on your POINT earned, you WIN!</li>
                     <li>Roll a 7, you LOSE.</li>
                 </ol>
             </div>
@@ -46,7 +46,7 @@
             <div class="game-content">
                 <p>Your BALANCE:</p>
                 <p>Current BET:</p>
-                <p>Current POINTS:</p>
+                <p>Current POINT:</p>
             </div>
 
             <div id="play">
