images of dwight added

--- a/index.html
+++ b/index.html
@@ -50,13 +50,24 @@
         <div class="blog-content">
             <h3>What the 'script'?!</h3>
             <em>Thurs., June 2nd, 2022</em>
-            <p>I spent some time reviewing lectures to touch on the basic of JavaScript and my mind doesn't seem to register the 'script src' concept each and every time. Until I realized that I consistently missed on adding the alert(); because I had used it interchangeably with another method script without citing the "source". 
-                Once I had that figured out, I took a dig into JavaScript operators to ensure I understood when and why to use "===" and/or "==" both in C# AND JavaScript. I need to get comfortable with these concepts as I'm developing some design ideas for CRAPS project.
-                As far as the front-end, there's a few things I need to add onto what I've started since Wednesday:
-                I will need to utilize TABLES to sort out the BUTTON (organized layout).
+            <p>I spent some time reviewing lectures to touch on the basics of JavaScript 
+                and my mind doesn't seem to register the 'script src' concept each and every time. </p>
+                
+                <p>Until I realized that I consistently missed on adding the alert(); because I had used it interchangeably 
+                with another method script without citing the "source". </p>
+
+                <img src="/images/dwight1.gif" width="300px">
+                <p>Once I had that figured out, I took a dig into JavaScript operators to ensure 
+                    I understood when and why to use "===" and/or "==" both in C# AND JavaScript. 
+                    I need to get comfortable with these concepts as I'm developing some design ideas for 
+                    CRAPS project. Or any other developments.</p>
+                <p>As far as the front-end, there's a few things I need to add onto what I've started since Wednesday:</p>
+                <sub>I will need to utilize TABLES to sort out the BUTTON (organized layout).
                 Contents should be layered in mininum of two DIVS;
                 First DIV: HERO-IMAGE with CRAPS' rules above a container that holds the playing area.
-                Second DIV: PLAYING area with GRID-Template, rows and columns still being determined.
+                Second DIV: PLAYING area with GRID-Template, rows and columns still being determined.</sub>
+                <p>I'll figure out the colors. Initially thought of emerald green and gold accents, 
+                    but that will be taken care of towards the finalization steps.
                 </p>
         </div>
 
