clean up layout

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </div>
 
         <div class="blog-content">
-            <h3>Layout ideas!</h3>
+            <h3>Lay it out, layout! </h3>
             <em>Sat., June 4th, 2022</em>
             <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the <dl> tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, so I can better control sectionally as far as styling goes.</p>
             
-                <iframe src="craps_project.html" width="100px"></iframe>
+                <iframe src="craps_project.html" width="400px" height="300px"></iframe>
 
                 <p>Ideas updated: Read over the rules of the game once again and figured
                     it's simple but not simple. I'm not going to think too much into it,
