--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </h2>
         <div class="blog-content">
         <h3>CRAPS! I chose craps.</h3>
-        <em>Wed., June 1st, 2022</em>
+        <em>Wed., June 1st 2022</em>
             <p>After reviewing the three project options of GUI portion of assignment, 
                 I chose CRAPS project. I find it ironic considering that I don't parttake in "gambling", not necessarily because I'm against it, 
                 I have the worst luck when it comes to betting anything. HA!</p>
@@ -49,7 +49,7 @@
 
         <div class="blog-content">
             <h3>What the 'script'?!</h3>
-            <em>Thurs., June 2nd, 2022</em>
+            <em>Thurs., June 2nd 2022</em>
             <p>I spent some time reviewing lectures to touch on the basics of JavaScript 
                 and my mind doesn't seem to register the 'script src' concept each and every time. </p>
                 
@@ -73,7 +73,7 @@
 
         <div class="blog-content">
             <h3>Lay it out, layout! </h3>
-            <em>Sat., June 4th, 2022</em>
+            <em>Sat., June 4th 2022</em>
             <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the <dl> tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, so I can better control sectionally as far as styling goes.</p>
             
                 <iframe src="craps_project.html" width="400px" height="300px"></iframe>
@@ -85,7 +85,7 @@
         </div>
         <div class="blog-content">
             <h3>Can't use the < form > elements without the FORM tag!</h3>
-            <em>Sun., June 5th, 2022</em>
+            <em>Sun., June 5th 2022</em>
             <p>Alright, first things first-- I forgot that the iFrames I previously 
                 added into yesterday's blog is a live-time display, luckily I had taken a screenshot
                 of the original layout I spent that "10 minutes" on. ;) Anyway, I'll keep the 
@@ -104,6 +104,27 @@
                 </p>
                 <p>I'm positive that you CAN use the FORM elements OUTSIDE of the form tag.</p>
                 <p>I used Descriptive Lists to achieve what I could've done with Ordered Lists. HAHAHAH.</p>
+        </div>
+
+        <div class="blog-content">
+            <h3>Forms, Input Types, Output Tags..</h3>
+            <em>Mon., June 6th 2022</em>
+            <p>When I started working on GUIs for Craps game project, I had it in the back of my mind
+              that I would need to utilize FORM tags, with all the other elements necessary. I had to ensure
+              I wasn't investing "too much" time into placing appropriate ones, by "substituting" them with mainly 
+              P tags.
+            </p>
+            <p>I didn't have the need to use Tables like I thought I would. That gives me extra time
+                to review my syntaxes so far, eliminate some of the P tags with actual 
+                Input Type elements (wherever I think is applicable).
+            </p>
+            <p>Pretty confident I will get the JavaScript functionality sorted out, but it's obviously
+                something I need to be mindful when developing this project -- so they can be wired up
+                with less headaches, simply because they've been prepped for the second part
+                of the development... Those darn JS Scripts.
+            </p>
+            <p></p>
+
         </div>
 
 
