--- a/craps_project.html
+++ b/craps_project.html
@@ -45,10 +45,13 @@
         
         <div id="game-container">
             <div class="game-content">
-                
-                <p>BALANCE:</p>
-                <p>Current BID:</p>
-                <p>Current POINT:</p>
+                <form>
+                    <!--Need to add 0 value upon input for Bid and Points, 
+                        as well syntax for outputs-->
+                    <label for="balance">BALANCE:</label>
+                    <label for="bet">Current BID:</label>
+                    <label for="point">Current POINT:</label>
+                </form>
             </div>
 
             <div id="play">
