--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
             <p>When I started working on GUIs for Craps game project, I had it in the back of my mind
               that I would need to utilize FORM tags, with all the other elements necessary. I had to ensure
               I wasn't investing "too much" time into placing appropriate ones, by "substituting" them with mainly 
-              P tags.
+              P tags. Right now, the utilization of OUTPUT element and everything about "math" are seemingly 
+              complicated: this calls for a review through repos made from Front-End Web class lectures.
             </p>
+            
             <p>I didn't have the need to use Tables like I thought I would. That gives me extra time
                 to review my syntaxes so far, eliminate some of the P tags with actual 
                 Input Type elements (wherever I think is applicable).
@@ -123,7 +125,7 @@
                 with less headaches, simply because they've been prepped for the second part
                 of the development... Those darn JS Scripts.
             </p>
-            <p></p>
+            <img src="/images/dwight3.gif" width="300px">
 
         </div>
 
