--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                 of the development... Those darn JS Scripts.
             </p>
             <img src="/images/dwight3.gif" width="300px">
-
+            
         </div>
+        <a href="https://giphy.com/">Gifs from GIPHY</a>
 
 
 
