notes for part two
javascript part

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>Note to self: Get on with these MEDIA QUERIESSSS.</p>
         </div>
         <div class="blog-content">
-            <h3>Can't use the < form > elements without the FORM tag!</h3>
+            <h3>Can't use form elements without the FORM tag! Or can you?</h3>
             <em>Sun., June 5th 2022</em>
             <p>Alright, first things first-- I forgot that the iFrames I previously 
                 added into yesterday's blog is a live-time display, luckily I had taken a screenshot
