--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 </head>
 <body>
+    <div id="navigation">
+        <div class="nav-functions">
+            <a href="">Back to Portfolio</a>
+            <a href="index.html">CRAPS Blog</a>
+            <a href="craps_project.html">CRAPS Game</a>
+        </div>
+        
+    </div>
 
     <div id="title-container">
         <h1>Documentation of Dariyan's Developments</h1>
