--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <img src="/images/dwight3.gif" width="300px">
             
         </div>
-        <a href="https://giphy.com/">Gifs from GIPHY</a>
+        <a href="https://giphy.com/" style="color: black">Gifs from GIPHY</a>
 
 
 
