--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
                     I understood when and why to use "===" and/or "==" both in C# AND JavaScript. 
                     I need to get comfortable with these concepts as I'm developing some design ideas for 
                     CRAPS project. Or any other developments.</p><br>
-                <p>As far as the front-end, there's a few things I need to add onto what I've started since Wednesday:</p>
+                <p>As far as front-end part goes, there's a few things I need to add onto what I've started since Wednesday:</p>
                 <sub>I will need to utilize TABLES to sort out the BUTTON (organized layout).
                 Contents should be layered in mininum of two DIVS;
                 First DIV: HERO-IMAGE with CRAPS' rules above a container that holds the playing area.
                 Second DIV: PLAYING area with GRID-Template, rows and columns still being determined.</sub><br>
-                <br><p>I'll figure out the colors. Initially thought of emerald green and gold accents, 
-                    but that will be taken care of towards the finalization steps.
+                <br><p>I'll figure out the color themes. Initially thought of emerald green and gold accents, 
+                    but that will be taken care of towards finalization.
                 </p>
         </div>
 
         <div class="blog-content">
             <h3>Lay it out, layout! </h3>
             <em>Sat., June 4th 2022</em>
-            <p>I followed with the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! 
+            <p>I followed through with some the ideas I had a couple days back and this is just about 10 minutes in, very basic but so far so good! 
                 I got the DIVs in like I intended, made some adjustments on the location and I'm going to use some of the 
                 DL tags in the game rules. Initially had envisioned a hero-image and decided to go with a similar concept but another DIV, 
                 so I can better control sectionally as far as styling goes.</p><br>
@@ -104,8 +104,8 @@
                     used without using the form tag, as with many other hiccups
                     along the way. I made it as far as adding GRID into nested DIV ids and classes, 
                     as I knew I needed more practice on these concepts.
-                    Ironically, I stumbled upon an issue with getting the columns utilizing classes.
-                    What it seems to me is working with IDs are much easier to manipulate, in terms of
+                    Ironically, I stumbled upon an issue with getting the columns set utilizing classes.
+                    What seems to me is working with IDs are much easier to manipulate, in terms of
                     sectioned layouts. 
                 </p><br>
                 <p>I'm having a slight brain-fog from all these changes and discoveries,
@@ -140,8 +140,8 @@
                 When I probably should've focused on Media Queries at this point. 
             </p><br>
             <p>Well, at least I was able to refresh myself on some topics since the VERY BEGINNING of this quarter.
-                I'm pretty content with the most part of my Front-End part of assignment. I figured I can add and tweaks
-                some stuff along the way, once this part-one assignment is graded.
+                I'm pretty content with the most part of my Front-Ens assignment. I figured I can add and tweaks
+                some stuff along the way, once this part-one is graded.
             </thead></p><br>
             <img src="/images/dwight3.gif" width="300px">
             
