--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 I figured now would be the time to do lecture reviews for some great re-freshers.</p><br>                
             <p>Speaking of refresher, a boost of afternoon caffeine couldn't do harm with my creativity juice. Woot!</p>
 
-            <img src="/images/dwight.gif" width="300px">
+            <img src="/images/dwight.gif" alt="Dwight Schrute getting ready to defeat" width="300px">
         </div>
 
         <div class="blog-content">
@@ -61,7 +61,7 @@
                 <p>Until I realized that I consistently missed on adding the alert(); because I had used it interchangeably 
                 with another method script without citing the "source". </p>
 
-                <img src="/images/dwight1.gif" width="300px"><br>
+                <img src="/images/dwight1.gif" alt="Dwight Schrute says Oh" width="300px"><br>
                 <p>Once I had that figured out, I took a dig into JavaScript operators to ensure 
                     I understood when and why to use "===" and/or "==" both in C# AND JavaScript. 
                     I need to get comfortable with these concepts as I'm developing some design ideas for 
@@ -143,7 +143,7 @@
                 I'm pretty content with the most part of my Front-Ens assignment. I figured I can add and tweaks
                 some stuff along the way, once this part-one is graded.
             </thead></p><br>
-            <img src="/images/dwight3.gif" width="300px">
+            <img src="/images/dwight3.gif" alt="Dwight Schrute says We'll See" width="300px">
             
         </div>
         <a href="https://giphy.com/" style="color: black">Gifs from GIPHY</a>
