--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                     it's simple but not simple. I'm not going to think too much into it,
                 as I'm feeling pretty confident it'll look how I envisioned. 
                 (I'm a perfectionist, my work will be my best work and ALWAYS a WIP.) </p><br>
+                
+                <br><P>Early stages of development (1 of 4 photos). Refer to following updates.</P>
+                <img src="images/prog1.jpg" width="400px">
+                
                 <p>Note to self: Get on with these MEDIA QUERIESSSS.</p>
         </div>
         <div class="blog-content">
@@ -112,7 +116,13 @@
                     but it's entertaining. And somewhat therapuetic. 
                 </p><br>
                 <p>I'm positive that you CAN use the FORM elements OUTSIDE of the form tag.</p><br>
-                <p>I used Descriptive Lists to achieve what I could've done with Ordered Lists. HAHAHAH.</p>
+                <p>I used Descriptive Lists to achieve what I could've done with Ordered Lists. HAHAHAH.
+                    Which, of course I corrected with favorable syntax.
+                </p><br>
+                <p>Progress with DIV concepts and revised GRID displays multiple times.</p><br>
+                <img src="images/prog2.jpg" width="400px">
+                <img src="images/prog3.jpg" width="400px">
+                <img src="images/prog4.jpg" width="400px">
         </div>
 
         <div class="blog-content">
