--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     sectioned layouts. 
                 </p><br>
                 <p>I'm having a slight brain-fog from all these changes and discoveries,
-                    but it's entertaining. And somewhat therapuetic. 
+                    but it's entertaining. And somewhat therapeutic. 
                 </p><br>
                 <p>I'm positive that you CAN use the FORM elements OUTSIDE of the form tag.</p><br>
                 <p>I used Descriptive Lists to achieve what I could've done with Ordered Lists. HAHAHAH.
