porfolio links updated on all end

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-functions">
             <a href="index.html">CRAPS Blog</a>
             <a href="craps_project.html">CRAPS Game</a>
-            <a href="">Return to Portfolio [inactive]</a>
+            <a href="https://ms-dariyansim-xo.github.io/FINAL-PORTFOLIO/">Dariyan's portfolio</a>
         </div>
         
     </div>
